# stellarspider

./: Makefile  README.md  pyproject.toml
src/stellarspider/: __init__.py
src/stellarspider/conf/: config.yaml
src/stellarspider/conf/category/: peanuts.yaml  salmon.yaml  salmon_fresh.yaml  salmon_frozen.yaml
src/stellarspider/core/: pipeline.py
src/stellarspider/core/filters/: base.py  rule_based.py  semantic.py
src/stellarspider/core/scoring/: combined_scorer.py  price_extractor.py
src/stellarspider/io/: data_loader.py  output_handler.py
testdata/: README.md  mixed_products.json  peanuts_data.json  salmon_data.json
tests/: test_filters.py  test_pipeline.py  test_price_extractor.py
