[project]
name = "stellarspider"
version = "0.1.0"
description = "NLP-based product filtering system for retailer search results"
readme = "README.md"
authors = [{ name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "omegaconf>=2.3.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
  "torch==2.2.*",
  "torchaudio>=2.2.2",
  "torchvision>=0.17.2",
]

[project.scripts]
stellarspider = "stellarspider:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["src/stellarspider"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
